fix: resolve OKR plugin UI issues and enhance task management functionality
- Fix UI rendering issues including OKR hierarchy header, dropdown visibility,
  toggle switches, and Scrum board column layout
- Add delete functionality for OKR elements (objectives, key results, projects, tasks)
- Implement Markdown task import functionality to integrate external tasks
- Fix task synchronization between project view and OKR hierarchy
- Add navigation improvements (back button from Scrum board to Calendar)
- Enhance Sprint information display in Scrum board
- Resolve TypeScript errors using appropriate type assertions
- Fix drag and drop functionality in Scrum board
- Correct code structure to eliminate nested method errors

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
 	"minAppVersion": "0.15.0",
 	"description": "A powerful OKR-based task management plugin for Obsidian that combines strategic planning with intelligent time management. Supports Objectives, Key Results, Projects, and Tasks with flexible views (Calendar, Task List, Scrum Board) and smart prioritization and scheduling logic.",
 	"author": "Adrian Coman",
-	"authorUrl": "",
+	"authorUrl": "https://github.com/ImpBonobo?tab=repositories",
 	"isDesktopOnly": false
   }
