--- a/package.json
+++ b/package.json
@@ -4,37 +4,37 @@
 	"description": "A obsidian-plugin for calendar- und agenda-views with task-aggregation",
 	"main": "main.js",
 	"scripts": {
-	  "dev": "node esbuild.config.mjs",
-	  "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-	  "version": "node version-bump.mjs && git add manifest.json versions.json"
+		"dev": "node esbuild.config.mjs",
+		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [
-	  "obsidian",
-	  "plugin",
-	  "calendar",
-	  "tasks",
-	  "agenda",
-	  "okr"
+		"obsidian",
+		"plugin",
+		"calendar",
+		"tasks",
+		"agenda",
+		"okr"
 	],
 	"author": "Adrian Coman",
 	"license": "MIT",
 	"devDependencies": {
-	  "@types/dragula": "^3.7.3",
-	  "@types/node": "^16.11.6",
-	  "@typescript-eslint/eslint-plugin": "5.29.0",
-	  "@typescript-eslint/parser": "5.29.0",
-	  "builtin-modules": "3.3.0",
-	  "esbuild": "0.17.3",
-	  "obsidian": "latest",
-	  "tslib": "2.4.0",
-	  "typescript": "4.7.4"
+		"@types/dragula": "^3.7.3",
+		"@types/node": "^16.11.6",
+		"@typescript-eslint/eslint-plugin": "5.29.0",
+		"@typescript-eslint/parser": "5.29.0",
+		"builtin-modules": "3.3.0",
+		"esbuild": "0.17.3",
+		"obsidian": "latest",
+		"tslib": "2.4.0",
+		"typescript": "^4.7.4"
 	},
 	"dependencies": {
-	  "@fullcalendar/core": "^6.1.10",
-	  "@fullcalendar/daygrid": "^6.1.10",
-	  "@fullcalendar/interaction": "^6.1.10",
-	  "@fullcalendar/timegrid": "^6.1.10",
-	  "dragula": "^3.7.3",
-	  "fullcalendar": "^6.1.10"
+		"@fullcalendar/core": "^6.1.10",
+		"@fullcalendar/daygrid": "^6.1.10",
+		"@fullcalendar/interaction": "^6.1.10",
+		"@fullcalendar/timegrid": "^6.1.10",
+		"dragula": "^3.7.3",
+		"fullcalendar": "^6.1.10"
 	}
-  }
+}
